force-app/main/default/objects/User/fields/tdc_tsw__Limit_Option__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Limit_Option__c</fullName>
    <inlineHelpText>Message limit will depend on 	this value</inlineHelpText>
    <label>Message Limit Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>