force-app/main/default/objects/User/fields/tdc_tsw__Stop_Incoming_Audio__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Stop_Incoming_Audio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Incoming Alert Audio</label>
    <type>Checkbox</type>
</CustomField>